--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <div class="maincontainer"
+  <div class="maincontainer">
     <section class="main-section">
       <h1 style="padding-bottom: 20px; font-size: 30px; line-height: 49px; border-bottom: 3px solid #ddd;">Portfolio</h1>
 
